remove buttons from playlist overview cards
- buttons can be placed in detail view

--- a/src/styles/components/_playlist.scss
+++ b/src/styles/components/_playlist.scss
@@ -5,6 +5,7 @@
         img {
             width: 200px;
             margin: 16px auto;
+            cursor: pointer;
             transform: scale(1);
             transition: transform 0.2s ease;
 
