--- a/src/templates/playlists.htm
+++ b/src/templates/playlists.htm
@@ -4,11 +4,19 @@
 </p>
 <div class="playlist-wrapper" layout="row" layout-wrap layout-align="center">
     <md-card class="playlist-card" ng-repeat="playlist in playlists" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
-        <img src="{{playlist.images[0].url ? playlist.images[0].url : '/dist/img/album-placeholder.png'}}" class="md-card-image md-whiteframe-1dp" alt="{{playlist.name}}">
+        <a ng-href="/#/playlists/{{playlist.owner.id}}/{{playlist.id}}">
+            <img ng-src="{{playlist.images[0].url ? playlist.images[0].url : '/dist/img/album-placeholder.png'}}" class="md-card-image md-whiteframe-1dp" alt="{{playlist.name}}">
+        </a>
         <md-card-title>
             <md-card-title-text>
                 <span class="md-headline">{{ playlist.name }}</span>
             </md-card-title-text>
         </md-card-title>
+        <md-card-actions layout="row" layout-align="end center">
+            <md-button class="md-icon-button" aria-label="Delete Playlist" ng-if="user.id == playlist.owner.id">
+                <md-icon md-svg-icon="/dist/img/icons/account.svg"></md-icon>
+            </md-button>
+        </md-card-actions>
+
     </md-card>
 </div>
