--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,4 @@
 @import 'components/playlist';
 @import 'components/playlist-detail';
+@import 'components/audio-player';
+@import 'components/context-menu';
