--- a/src/templates/recommendations.htm
+++ b/src/templates/recommendations.htm
@@ -2,6 +2,9 @@
 <p>
     Here are some recommendations!
 </p>
+<p style="text-align:center;">
+    <md-button class="md-raised" ng-click="reroll()">Gimme more!</md-button>
+</p>
 
 <div class="recommendations-wrapper" layout="row" layout-wrap layout-align="center">
     <md-card class="playlist-card" ng-repeat="track in recommendations" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
