add entry animations for recommendations

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,3 +2,4 @@
 @import 'components/playlist-detail';
 @import 'components/audio-player';
 @import 'components/context-menu';
+@import 'components/recommendations';
