--- a/src/templates/recommendations.htm
+++ b/src/templates/recommendations.htm
@@ -7,7 +7,7 @@
 </p>
 
 <div class="recommendations-wrapper" layout="row" layout-wrap layout-align="center">
-    <md-card class="playlist-card" ng-repeat="track in recommendations" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
+    <md-card class="recommendation-card" ng-repeat="track in recommendations" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
         <!-- <a ng-href="/#/playlists/{{playlist.owner.id}}/{{playlist.id}}"> -->
         <img ng-src="{{track.album.images[0].url ? track.album.images[0].url : '/dist/img/album-placeholder.png'}}" class="md-card-image md-whiteframe-1dp" alt="{{track.name}}">
         <!-- </a> -->
