--- a/src/templates/playlists.htm
+++ b/src/templates/playlists.htm
@@ -4,7 +4,7 @@
 </p>
 <div class="playlist-wrapper" layout="row" layout-wrap layout-align="center">
     <md-card class="playlist-card" ng-repeat="playlist in playlists" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
-        <a ng-href="/#/playlists/{{playlist.owner.id}}/{{playlist.id}}">
+        <a ng-href="/#!/playlists/{{playlist.owner.id}}/{{playlist.id}}">
             <img ng-src="{{playlist.images[0].url ? playlist.images[0].url : '/dist/img/album-placeholder.png'}}" class="md-card-image md-whiteframe-1dp" alt="{{playlist.name}}">
         </a>
         <md-card-title>
@@ -17,6 +17,5 @@
                 <md-icon md-svg-icon="/dist/img/icons/account.svg"></md-icon>
             </md-button>
         </md-card-actions>
-
     </md-card>
 </div>
