center header headline text on all pages

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,3 +3,7 @@
 @import 'components/audio-player';
 @import 'components/context-menu';
 @import 'components/recommendations';
+
+.header {
+    text-align: center;
+}
