--- a/src/templates/playlist-detail.htm
+++ b/src/templates/playlist-detail.htm
@@ -1,7 +1,10 @@
-<h1>Detail view!</h1>
-<p>
-    Here are all of the playlist's songs!
-</p>
+<div class="header">
+    <h1>Detail view!</h1>
+    <p>
+        Here are all of the playlist's songs!
+    </p>    
+</div>
+
 <div class="playlist-detail-wrapper">
     <md-card class="playlist-detail-card">
         <md-card-title>
