--- a/src/templates/playlists.htm
+++ b/src/templates/playlists.htm
@@ -1,7 +1,9 @@
-<h1>Playlists!</h1>
-<p>
-    Here are all of you playlists!
-</p>
+<div class="header">
+    <h1>Playlists!</h1>
+    <p>
+        Here are all of you playlists!
+    </p>
+</div>
 <div class="playlist-wrapper" layout="row" layout-wrap layout-align="center">
     <md-card class="playlist-card" ng-repeat="playlist in playlists" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
         <a ng-href="/#!/playlists/{{playlist.owner.id}}/{{playlist.id}}">
