--- a/src/templates/recommendations.htm
+++ b/src/templates/recommendations.htm
@@ -1,10 +1,12 @@
-<h1>Recommendations!</h1>
-<p>
-    Here are some recommendations!
-</p>
-<p style="text-align:center;">
-    <md-button class="md-raised" ng-click="reroll()">Gimme more!</md-button>
-</p>
+<div class="header">
+    <h1>Recommendations!</h1>
+    <p>
+        Here are some recommendations!
+    </p>
+    <p style="text-align:center;">
+        <md-button class="md-raised" ng-click="reroll()">Gimme more!</md-button>
+    </p>
+</div>
 
 <div class="recommendations-wrapper" layout="row" layout-wrap layout-align="center">
     <md-card class="recommendation-card" ng-repeat="track in recommendations" flex="80" flex-gt-xs="40" flex-gt-sm="25" flex-gt-md="20" layout-align="center">
