default image for offline tracks in playlist detail view

--- a/src/styles/components/_playlist-detail.scss
+++ b/src/styles/components/_playlist-detail.scss
@@ -1,6 +1,4 @@
-//.playlist-detail-wrapper {
-//    margin: auto;
-//    display: block;
-//
-//    .playlist-detail-card {}
-//}
+.playlist-detail-card md-card-title {
+    text-align: center;
+    padding: 24px;
+}
