--- a/src/templates/playlist-detail.htm
+++ b/src/templates/playlist-detail.htm
@@ -17,7 +17,7 @@
                 <md-subheader class="md-no-sticky">{{ tracks.length }} songs in playlist</md-subheader>
                 <div ng-repeat="item in tracks">
                     <md-list-item class="md-3-line" ng-click="null">
-                        <img ng-src="{{item.track.album.images[1].url}}" class="md-avatar" alt="{{item.track.name}}" />
+                        <img ng-src="{{item.track.album.images[1].url ? item.track.album.images[1].url : '/dist/img/album-placeholder.png'}}" class="md-avatar" alt="{{item.track.name}}" />
                         <div class="md-list-item-text" layout="column">
                             <h3>{{ item.track.name }}</h3>
                             <h4>
